--- a/package.json
+++ b/package.json
@@ -9,17 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl": "^2.9.3",
+    "@formatjs/intl-localematcher": "^0.4.2",
+    "@hookform/resolvers": "^3.3.1",
+    "@iconify/react": "^4.1.1",
+    "@nextui-org/react": "^2.1.13",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^10.16.4",
+    "negotiator": "^0.6.3",
     "next": "13.5.1",
+    "next-auth": "^4.23.1",
+    "next-i18n-router": "^3.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-intl": "^6.4.7",
+    "react-select": "^5.7.5",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "universal-cookie": "^6.1.1",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/negotiator": "^0.6.1",
+    "prisma": "^5.3.1"
   }
 }
