--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^10.16.4",
+    "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
     "next": "13.5.1",
     "next-auth": "^4.23.1",
-    "next-i18n-router": "^3.3.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
