--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "gso-ui",
   "version": "0.1.0",
+  "prisma": {
+    "seed": "ts-node prisma/seed.mjs --esm"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,15 +12,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.2",
     "@formatjs/intl": "^2.9.3",
     "@formatjs/intl-localematcher": "^0.4.2",
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
     "@nextui-org/react": "^2.1.13",
+    "@prisma/client": "5.3.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^10.16.4",
@@ -30,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-hot-toast": "^2.4.1",
     "react-intl": "^6.4.7",
     "react-select": "^5.7.5",
     "tailwindcss": "3.3.3",
@@ -38,7 +45,9 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/negotiator": "^0.6.1",
-    "prisma": "^5.3.1"
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1"
   }
 }
