--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "next": "13.5.1",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "otplib": "^12.0.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-auth-code-input": "^3.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
